--- a/lcd.ioc
+++ b/lcd.ioc
@@ -1,7 +1,35 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_2
+ADC1.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,OffsetSignedSaturation-1\#ChannelRegularConversion,NbrOfConversionFlag,master
+ADC1.NbrOfConversionFlag=1
+ADC1.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetSignedSaturation-1\#ChannelRegularConversion=DISABLE
+ADC1.Rank-1\#ChannelRegularConversion=1
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.master=1
 CAD.formats=[]
 CAD.pinconfig=Dual
 CAD.provider=
+Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.0.EventEnable=DISABLE
+Dma.ADC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.ADC1.0.Instance=DMA1_Stream0
+Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.0.Mode=DMA_CIRCULAR
+Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
+Dma.ADC1.0.RequestNumber=1
+Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.ADC1.0.SignalID=NONE
+Dma.ADC1.0.SyncEnable=DISABLE
+Dma.ADC1.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.ADC1.0.SyncRequestNumber=1
+Dma.ADC1.0.SyncSignalID=NONE
+Dma.Request0=ADC1
+Dma.RequestsNb=1
 File.Version=6
 GPIO.groupedBy=
 KeepUserPlacement=false
@@ -24,13 +52,15 @@ LTDC.WindowX1_L0=800
 LTDC.WindowY1_L0=400
 Mcu.CPN=STM32H723ZGT6
 Mcu.Family=STM32H7
-Mcu.IP0=CORTEX_M7
-Mcu.IP1=DEBUG
-Mcu.IP2=LTDC
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IPNb=6
+Mcu.IP0=ADC1
+Mcu.IP1=CORTEX_M7
+Mcu.IP2=DEBUG
+Mcu.IP3=DMA
+Mcu.IP4=LTDC
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=SYS
+Mcu.IPNb=8
 Mcu.Name=STM32H723ZGTx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE4
@@ -42,50 +72,53 @@ Mcu.Pin13=PA3
 Mcu.Pin14=PA4
 Mcu.Pin15=PA5
 Mcu.Pin16=PA6
-Mcu.Pin17=PC4
-Mcu.Pin18=PB0
-Mcu.Pin19=PB1
+Mcu.Pin17=PA7
+Mcu.Pin18=PC4
+Mcu.Pin19=PB0
 Mcu.Pin2=PE6
-Mcu.Pin20=PE11
-Mcu.Pin21=PE12
-Mcu.Pin22=PE14
-Mcu.Pin23=PB10
-Mcu.Pin24=PB14
-Mcu.Pin25=PB15
-Mcu.Pin26=PD8
-Mcu.Pin27=PD9
-Mcu.Pin28=PD10
-Mcu.Pin29=PG7
+Mcu.Pin20=PB1
+Mcu.Pin21=PF11
+Mcu.Pin22=PE11
+Mcu.Pin23=PE12
+Mcu.Pin24=PE14
+Mcu.Pin25=PB10
+Mcu.Pin26=PB14
+Mcu.Pin27=PB15
+Mcu.Pin28=PD8
+Mcu.Pin29=PD9
 Mcu.Pin3=PC13
-Mcu.Pin30=PC6
-Mcu.Pin31=PC7
-Mcu.Pin32=PC9
-Mcu.Pin33=PA8
-Mcu.Pin34=PA9
-Mcu.Pin35=PA10
-Mcu.Pin36=PA13(JTMS/SWDIO)
-Mcu.Pin37=PA14(JTCK/SWCLK)
-Mcu.Pin38=PA15(JTDI)
-Mcu.Pin39=PC10
+Mcu.Pin30=PD10
+Mcu.Pin31=PG7
+Mcu.Pin32=PC6
+Mcu.Pin33=PC7
+Mcu.Pin34=PC9
+Mcu.Pin35=PA8
+Mcu.Pin36=PA9
+Mcu.Pin37=PA10
+Mcu.Pin38=PA13(JTMS/SWDIO)
+Mcu.Pin39=PA14(JTCK/SWCLK)
 Mcu.Pin4=PC14-OSC32_IN
-Mcu.Pin40=PD2
-Mcu.Pin41=PG13
-Mcu.Pin42=PB3(JTDO/TRACESWO)
-Mcu.Pin43=PB8
-Mcu.Pin44=PE1
-Mcu.Pin45=VP_SYS_VS_Systick
+Mcu.Pin40=PA15(JTDI)
+Mcu.Pin41=PC10
+Mcu.Pin42=PD2
+Mcu.Pin43=PG13
+Mcu.Pin44=PB3(JTDO/TRACESWO)
+Mcu.Pin45=PB8
+Mcu.Pin46=PE1
+Mcu.Pin47=VP_SYS_VS_Systick
 Mcu.Pin5=PC15-OSC32_OUT
 Mcu.Pin6=PF10
 Mcu.Pin7=PH0-OSC_IN
 Mcu.Pin8=PH1-OSC_OUT
 Mcu.Pin9=PC0
-Mcu.PinsNb=46
+Mcu.PinsNb=48
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H723ZGTx
 MxCube.Version=6.9.2
 MxDb.Version=DB.6.0.92
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -124,6 +157,8 @@ PA5.Mode=RGB888
 PA5.Signal=LTDC_R4
 PA6.Mode=RGB888
 PA6.Signal=LTDC_G2
+PA7.Locked=true
+PA7.Signal=ADCx_INP7
 PA8.Mode=RGB888
 PA8.Signal=LTDC_B3
 PA9.GPIOParameters=GPIO_Label
@@ -204,6 +239,9 @@ PE6.Mode=RGB888
 PE6.Signal=LTDC_G1
 PF10.Mode=RGB888
 PF10.Signal=LTDC_DE
+PF11.Locked=true
+PF11.Mode=IN2-Single-Ended
+PF11.Signal=ADC1_INP2
 PG13.Mode=RGB888
 PG13.Signal=LTDC_R0
 PG7.GPIOParameters=GPIO_Label
@@ -247,8 +285,8 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_LTDC_Init-LTDC-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
-RCC.ADCFreq_Value=608000000
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_LTDC_Init-LTDC-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+RCC.ADCFreq_Value=96000000
 RCC.AHB12Freq_Value=192000000
 RCC.AHB4Freq_Value=192000000
 RCC.APB1Freq_Value=96000000
@@ -268,21 +306,21 @@ RCC.D3PPRE=RCC_APB4_DIV2
 RCC.DFSDMACLkFreq_Value=48000000
 RCC.DFSDMFreq_Value=96000000
 RCC.DIVM1=4
-RCC.DIVM2=1
+RCC.DIVM2=4
 RCC.DIVM3=1
 RCC.DIVN1=12
-RCC.DIVN2=19
+RCC.DIVN2=12
 RCC.DIVN3=4
 RCC.DIVP1=1
 RCC.DIVP1Freq_Value=192000000
-RCC.DIVP2Freq_Value=608000000
+RCC.DIVP2Freq_Value=96000000
 RCC.DIVP3Freq_Value=150000000
 RCC.DIVQ1=4
 RCC.DIVQ1Freq_Value=48000000
-RCC.DIVQ2Freq_Value=608000000
+RCC.DIVQ2Freq_Value=96000000
 RCC.DIVQ3Freq_Value=150000000
 RCC.DIVR1Freq_Value=96000000
-RCC.DIVR2Freq_Value=608000000
+RCC.DIVR2Freq_Value=96000000
 RCC.DIVR3=12
 RCC.DIVR3Freq_Value=25000000
 RCC.FDCANFreq_Value=48000000
@@ -293,7 +331,7 @@ RCC.HCLKFreq_Value=192000000
 RCC.HSE_VALUE=8000000
 RCC.I2C123Freq_Value=96000000
 RCC.I2C4Freq_Value=96000000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVN3,DIVP1,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL3FRACN,PLLFRACN,PWR_Regulator_Voltage_Scale,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVN3,DIVP1,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL3FRACN,PLLFRACN,PWR_Regulator_Voltage_Scale,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
 RCC.LPTIM1Freq_Value=96000000
 RCC.LPTIM2Freq_Value=96000000
 RCC.LPTIM345Freq_Value=96000000
@@ -301,6 +339,7 @@ RCC.LPUART1Freq_Value=96000000
 RCC.LTDCFreq_Value=25000000
 RCC.MCO1PinFreq_Value=64000000
 RCC.MCO2PinFreq_Value=192000000
+RCC.PLL2FRACN=0
 RCC.PLL3FRACN=5632
 RCC.PLLFRACN=0
 RCC.PWR_Regulator_Voltage_Scale=PWR_REGULATOR_VOLTAGE_SCALE0
@@ -326,11 +365,13 @@ RCC.USART234578Freq_Value=96000000
 RCC.USBCLockSelection=RCC_USBCLKSOURCE_HSI48
 RCC.USBFreq_Value=48000000
 RCC.VCO1OutputFreq_Value=192000000
-RCC.VCO2OutputFreq_Value=1216000000
+RCC.VCO2OutputFreq_Value=192000000
 RCC.VCO3OutputFreq_Value=300000000
 RCC.VCOInput1Freq_Value=16000000
-RCC.VCOInput2Freq_Value=64000000
+RCC.VCOInput2Freq_Value=16000000
 RCC.VCOInput3Freq_Value=64000000
+SH.ADCx_INP7.0=ADC1_INP7,IN7-Single-Ended
+SH.ADCx_INP7.ConfNb=1
 SH.GPXTI7.0=GPIO_EXTI7
 SH.GPXTI7.ConfNb=1
 VP_SYS_VS_Systick.Mode=SysTick
