Do ADC correctly through DMA. Scan mode for getting all channels. Non-continous, non-discontinous. Do not care and cannot poll EOC. Circular DMA. Enable ADC INT. Number of conversions, 2. Create a buffer of 2*16bit in SRAM1. Start DMA. Wait for INT. Get ADC data.

--- a/lcd.ioc
+++ b/lcd.ioc
@@ -1,11 +1,22 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_2
-ADC1.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,OffsetSignedSaturation-1\#ChannelRegularConversion,NbrOfConversionFlag,master
+ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_7
+ADC1.ContinuousConvMode=DISABLE
+ADC1.ConversionDataManagement=ADC_CONVERSIONDATA_DMA_CIRCULAR
+ADC1.EOCSelection=ADC_EOC_SEQ_CONV
+ADC1.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,OffsetSignedSaturation-1\#ChannelRegularConversion,NbrOfConversionFlag,master,ContinuousConvMode,EOCSelection,Overrun,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,OffsetSignedSaturation-2\#ChannelRegularConversion,NbrOfConversion,ConversionDataManagement,Resolution
+ADC1.NbrOfConversion=2
 ADC1.NbrOfConversionFlag=1
 ADC1.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-2\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.OffsetSignedSaturation-1\#ChannelRegularConversion=DISABLE
+ADC1.OffsetSignedSaturation-2\#ChannelRegularConversion=DISABLE
+ADC1.Overrun=ADC_OVR_DATA_PRESERVED
 ADC1.Rank-1\#ChannelRegularConversion=1
+ADC1.Rank-2\#ChannelRegularConversion=2
+ADC1.Resolution=ADC_RESOLUTION_16B
 ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC1.master=1
 CAD.formats=[]
 CAD.pinconfig=Dual
@@ -117,6 +128,7 @@ Mcu.UserConstants=
 Mcu.UserName=STM32H723ZGTx
 MxCube.Version=6.9.2
 MxDb.Version=DB.6.0.92
+NVIC.ADC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
